@@ -32,8 +32,6 @@ Delete 1 7 0
 Tab 9 0 8
 KP_Tab 9 0 8
 ISO_Left_Tab 9 0 1
-Alt_L 9 0 8
-Meta_L 9 0 8
 Escape 9 4 8
 Control_L 9 4 8
 Find 0 6 0
